build.log

==============================================
START : FUNC_BUILD_KERNEL
==============================================

build project=ms013g_eur
build common config=msm8226-sec_defconfig 
build variant config=msm8226-sec_ms013g_eur_defconfig 
build secure option= 
build SEANDROID option= 
make: Entering directory `/mnt/G7102_MM_SWA_Opensource'
  GEN     /mnt/okernel/ms013g_eur/Makefile
sound/soc/codecs/audience/Kconfig:40:warning: type of 'SND_SOC_ES_SLIM' redefined from 'boolean' to 'tristate'
sound/soc/codecs/audience/Kconfig:43:warning: type of 'SND_SOC_ES_I2C' redefined from 'boolean' to 'tristate'
sound/soc/codecs/audience/Kconfig:44:warning: choice value used outside its choice group
sound/soc/codecs/audience/Kconfig:41:warning: choice value used outside its choice group
arch/arm/configs/msm8226-sec_defconfig:224:warning: override: reassigning to symbol CFG80211_INTERNAL_REGDB
arch/arm/configs/msm8226-sec_defconfig:328:warning: override: reassigning to symbol MSM_CPP
arch/arm/configs/msm8226-sec_defconfig:494:warning: override: reassigning to symbol SWITCH
arch/arm/configs/msm8226-sec_defconfig:495:warning: override: reassigning to symbol COMPACTION
arch/arm/configs/msm8226-sec_defconfig:607:warning: unexpected data
arch/arm/configs/msm8226-sec_defconfig:610:warning: unexpected data
arch/arm/configs/msm8226-sec_defconfig:623:warning: unexpected data
warning: (SND_SOC_MSM8226) selects DOLBY_DAP which has unmet direct dependencies (SOUND && !M68K && !UML && SND && SND_SOC && SND_SOC_MSM8974)
arch/arm/configs/selinux_defconfig:1:warning: override: reassigning to symbol EXT2_FS_XATTR
arch/arm/configs/selinux_defconfig:4:warning: override: reassigning to symbol EXT4_FS_SECURITY
arch/arm/configs/selinux_defconfig:5:warning: override: reassigning to symbol AUDIT
arch/arm/configs/selinux_defconfig:7:warning: override: reassigning to symbol SECURITY
arch/arm/configs/selinux_defconfig:8:warning: override: reassigning to symbol LSM_MMAP_MIN_ADDR
arch/arm/configs/selinux_defconfig:9:warning: override: reassigning to symbol SECURITY_NETWORK
arch/arm/configs/selinux_defconfig:10:warning: override: reassigning to symbol SECURITY_SELINUX
arch/arm/configs/selinux_defconfig:13:warning: symbol value 'y' invalid for SECURITY_SELINUX_CHECKREQPROT_VALUE
arch/arm/configs/selinux_defconfig:15:warning: override: reassigning to symbol NF_CONNTRACK_SECMARK
arch/arm/configs/selinux_defconfig:16:warning: override: reassigning to symbol NETFILTER_XT_TARGET_CONNSECMARK
arch/arm/configs/selinux_defconfig:18:warning: override: reassigning to symbol IP_NF_SECURITY
arch/arm/configs/msm8226-sec_ms013g_eur_defconfig:20:warning: override: reassigning to symbol MSM_VIDC_V4L2
arch/arm/configs/msm8226-sec_ms013g_eur_defconfig:24:warning: override: reassigning to symbol SEC_NFC_I2C
arch/arm/configs/msm8226-sec_ms013g_eur_defconfig:59:warning: override: reassigning to symbol INPUT_GPIO
arch/arm/configs/msm8226-sec_ms013g_eur_defconfig:83:warning: override: reassigning to symbol USB_ANDROID_SAMSUNG_MTP
arch/arm/configs/msm8226-sec_ms013g_eur_defconfig:113:warning: override: reassigning to symbol SEC_THERMISTOR
warning: (SND_SOC_MSM8226) selects DOLBY_DAP which has unmet direct dependencies (SOUND && !M68K && !UML && SND && SND_SOC && SND_SOC_MSM8974)
boolean symbol SND_SOC_MAX98506 tested for 'm'? test forced to 'n'
KCONFIG_SELINUX(arch/arm/configs/selinux_defconfig)
KCONFIG_LOG_SELINUX((null))
KCONFIG_TIMA((null))
KCONFIG_VARIANT(arch/arm/configs/msm8226-sec_ms013g_eur_defconfig)
KCONFIG_DEBUG((null))
#
# configuration written to .config
#
make: Leaving directory `/mnt/G7102_MM_SWA_Opensource'
make: Entering directory `/mnt/G7102_MM_SWA_Opensource'
  GEN     /mnt/okernel/ms013g_eur/Makefile
scripts/kconfig/conf --silentoldconfig Kconfig
sound/soc/codecs/audience/Kconfig:40:warning: type of 'SND_SOC_ES_SLIM' redefined from 'boolean' to 'tristate'
sound/soc/codecs/audience/Kconfig:43:warning: type of 'SND_SOC_ES_I2C' redefined from 'boolean' to 'tristate'
sound/soc/codecs/audience/Kconfig:44:warning: choice value used outside its choice group
sound/soc/codecs/audience/Kconfig:41:warning: choice value used outside its choice group
warning: (SND_SOC_MSM8226) selects DOLBY_DAP which has unmet direct dependencies (SOUND && !M68K && !UML && SND && SND_SOC && SND_SOC_MSM8974)
warning: (SND_SOC_MSM8226) selects DOLBY_DAP which has unmet direct dependencies (SOUND && !M68K && !UML && SND && SND_SOC && SND_SOC_MSM8974)
boolean symbol SND_SOC_MAX98506 tested for 'm'? test forced to 'n'
#
# configuration written to .config
#
  GEN     /mnt/okernel/ms013g_eur/Makefile
  CHK     include/linux/version.h
/mnt/G7102_MM_SWA_Opensource/drivers/gpu/gpu_sysfs/Kbuild:29: **** Make sure target file is defined. Check the TARGET and GPU configs in Makefile and Kernel Config. Module won't work without target file. ****
  Using /mnt/G7102_MM_SWA_Opensource as source for kernel
  CHK     include/generated/utsrelease.h
make[2]: Nothing to be done for `arch/arm/boot/dtbs'.
make[2]: `include/generated/mach-types.h' is up to date.
  CALL    /mnt/G7102_MM_SWA_Opensource/scripts/checksyscalls.sh
grep: /mnt/G7102_MM_SWA_Opensource/scripts/../arch/x86/syscalls/syscall_32.tbl: No such file or directory
  CHK     include/generated/compile.h
  CC      drivers/net/wireless/wcnss/wcnss_wlan.o
  CC      drivers/net/wireless/wcnss/qcomwlan_secif.o
  CC      drivers/net/wireless/wcnss/wcnss_vreg.o
  CC      drivers/net/wireless/wcnss/wcnss_prealloc.o
/mnt/G7102_MM_SWA_Opensource/drivers/net/wireless/wcnss/wcnss_wlan.c: In function 'wcnss_reset_fiq':
/mnt/G7102_MM_SWA_Opensource/drivers/net/wireless/wcnss/wcnss_wlan.c:975:5: error: implicit declaration of function 'wcnss_log_iris_regs' [-Werror=implicit-function-declaration]
     wcnss_log_iris_regs();
     ^
  CC      drivers/power/power_supply_core.o
  CC      drivers/regulator/core.o
  CC      drivers/power/power_supply_sysfs.o
  CC      drivers/rtc/rtc-lib.o
  CC      drivers/power/power_supply_leds.o
  CC      drivers/rtc/hctosys.o
  CC      drivers/power/qpnp-bms.o
  CC      drivers/rtc/class.o
cc1: some warnings being treated as errors
make[5]: *** [drivers/net/wireless/wcnss/wcnss_wlan.o] Error 1
make[4]: *** [drivers/net/wireless/wcnss] Error 2
make[3]: *** [drivers/net/wireless] Error 2
make[2]: *** [drivers/net] Error 2
make[2]: *** Waiting for unfinished jobs....
  CC      drivers/rtc/interface.o
  CC      drivers/rtc/rtc-dev.o
  CC      drivers/rtc/rtc-proc.o
  CC      drivers/rtc/rtc-sysfs.o
  CC      drivers/rtc/alarm.o
  CC      drivers/rtc/alarm-dev.o
  CC      drivers/regulator/dummy.o
  CC      drivers/regulator/fixed-helper.o
  CC      drivers/rtc/qpnp-rtc.o
  CC      drivers/power/qpnp-sec-charger.o
  CC      drivers/regulator/of_regulator.o
  LD      drivers/rtc/rtc-core.o
  LD      drivers/rtc/built-in.o
  CC      drivers/power/battery_current_limit.o
  CC      drivers/regulator/fixed.o
  CC      drivers/regulator/stub-regulator.o
  CC      drivers/regulator/qpnp-regulator.o
  LD      drivers/power/power_supply.o
  LD      drivers/regulator/built-in.o
  LD      drivers/power/built-in.o
make[1]: *** [drivers] Error 2
make: *** [sub-make] Error 2
make: Leaving directory `/mnt/G7102_MM_SWA_Opensource'
